fixed margin on mobile carousel

--- a/style.css
+++ b/style.css
@@ -897,7 +897,7 @@ footer p {
     font-weight: 700;
     line-height: 4.5rem;
     max-width: 32rem;
-    margin-top: 29rem;
+    margin-top: 33.5vh;
     text-transform: uppercase;
   }
 
@@ -906,7 +906,7 @@ footer p {
     font-weight: 700;
     line-height: 6.2rem;
     max-width: 40rem;
-    margin-top: 33.5rem;
+    margin-top: 34.5vh;
     text-transform: uppercase;
   }
 
